--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">GitHub</a>.
+        2019 - Georgi Mitrev </br>
+        Powered by <a href="http://jekyllrb.com">Jekyll</a>.
+        Theme by <a href="http://johnotander.com">John Otander</a>.<br>
     </small>
   </div>
 </footer>
