--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{% if page.meta_description %}{{ page.meta_description | xml_escape }}{% elsif page.summary %}{{ page.summary | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
-    <script async defer data-website-id="94c87fb9-4e8e-471c-8e64-6460ece90b5a" src="https://analytics.mitrev.net/umami.js" />
+    <script async="" data-website-id="94c87fb9-4e8e-471c-8e64-6460ece90b5a" defer="" src="https://analytics.mitrev.net/umami.js">
     {% if page.meta_robots %}<meta name="robots" content="{{ page.meta_robots }}">
     {% else %}<meta name="robots" content="all">{% endif %}
     <meta name="author" content="{{ site.author }}">
