--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,10 @@ layout: default
 {% assign minutes = 1 %}
 {% endif %}
 
+<div class='banner'>
+  Check out my newest project for tracking portfolio performance,
+  <a target='_blank' href='https://stonksfolio.com'>Stonksfolio</a>.
+</div>
 <div class="post-header mb2">
   <h1>{{ page.title }}</h1>
   <span class="post-meta">{{ page.date | date: site.date_format }}</span><br>
