--- a/css/pixyll.scss
+++ b/css/pixyll.scss
@@ -33,3 +33,10 @@
 @import 'gists';
 @import 'measure';
 @import 'pagination';
+
+div.banner {
+  background: #f1f1f1;
+  border: 1px solid #bbb;
+  font-size: 0.8rem;
+  padding: 15px;
+}
